--- a/referenssit.html
+++ b/referenssit.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Aug 22 2023 05:55:06 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Aug 29 2023 05:27:57 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3a8212037d6b" data-wf-site="638cce601f96abee0a5facb7">
 <head>
   <meta charset="utf-8">
@@ -355,5 +355,6 @@
   </main>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=638cce601f96abee0a5facb7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/nordsoy.js" type="text/javascript"></script>
+  <script type="text/javascript" src="https://smartarget.online/loader.js?u=e505a0755dfbbee52d27e4d14b7dc5c5948b332b"></script>
 </body>
 </html>
