--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Oct 31 2023 12:56:02 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Nov 17 2023 14:05:47 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3a13cc037ca2" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -557,15 +557,15 @@
         </div>
         <div class="margin-70px">
           <div class="w-layout-grid client-grid">
-            <div id="w-node-d097cfb4-6df8-1cd9-3436-216ba8f5439b-cc037ca2" class="client-card">
-              <a href="referenssi/helsingin-kulta" class="client-image w-inline-block"><img src="images/mockup-helsinginkulta.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-helsinginkulta.webp 500w, images/mockup-helsinginkulta.webp 800w, images/mockup-helsinginkulta.webp 1080w, images/mockup-helsinginkulta.webp 1600w, images/mockup-helsinginkulta.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Helsingin Kullan verkkosivut." class="client-image"></a>
+            <div id="w-node-d097cfb4-6df8-1cd9-3436-216ba8f5438b-cc037ca2" class="client-card">
+              <a href="referenssi/hautaustoimisto-rauha-oy" class="client-image w-inline-block"><img src="images/mockup-rauhanhautaus.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-rauhanhautaus.webp 500w, images/mockup-rauhanhautaus.webp 800w, images/mockup-rauhanhautaus.webp 1080w, images/mockup-rauhanhautaus.webp 1600w, images/mockup-rauhanhautaus.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Hautaustoimisto Rauha Oy:n verkkosivut." class="client-image"></a>
               <div class="client-content add-shadow">
                 <div class="category-felx">
-                  <a href="#" class="category-tag">10/2023</a>
+                  <a href="#" class="category-tag">11/2023</a>
                 </div>
-                <a href="referenssi/helsingin-kulta" class="client-title">Helsingin Kulta</a>
+                <a href="referenssi/hautaustoimisto-rauha-oy" class="client-title">Hautaustoimisto Rauha Oy</a>
                 <div class="margin-20px">
-                  <a href="referenssi/helsingin-kulta" class="button-line w-inline-block">
+                  <a href="referenssi/hautaustoimisto-rauha-oy" class="button-line w-inline-block">
                     <div>
                       <div>Lue lisää</div>
                       <div class="button-line-button">
@@ -576,15 +576,15 @@
                 </div>
               </div>
             </div>
-            <div id="w-node-d097cfb4-6df8-1cd9-3436-216ba8f5438b-cc037ca2" class="client-card">
-              <a href="referenssi/mikura-sushi-oy" class="client-image w-inline-block"><img src="images/mockup-mikura-sushi.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-mikura-sushi-p-500.webp 500w, images/mockup-mikura-sushi-p-800.webp 800w, images/mockup-mikura-sushi-p-1080.webp 1080w, images/mockup-mikura-sushi-p-1600.webp 1600w, images/mockup-mikura-sushi.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Mikura Sushin verkkosivut." class="client-image"></a>
+            <div id="w-node-d097cfb4-6df8-1cd9-3436-216ba8f5439b-cc037ca2" class="client-card">
+              <a href="referenssi/helsingin-kulta" class="client-image w-inline-block"><img src="images/mockup-helsinginkulta.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-helsinginkulta-p-500.webp 500w, images/mockup-helsinginkulta-p-800.webp 800w, images/mockup-helsinginkulta-p-1080.webp 1080w, images/mockup-helsinginkulta-p-1600.webp 1600w, images/mockup-helsinginkulta.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Helsingin Kullan verkkosivut." class="client-image"></a>
               <div class="client-content add-shadow">
                 <div class="category-felx">
-                  <a href="#" class="category-tag">08/2023</a>
+                  <a href="#" class="category-tag">10/2023</a>
                 </div>
-                <a href="referenssi/mikura-sushi-oy" class="client-title">Mikura Sushi Oy</a>
+                <a href="referenssi/helsingin-kulta" class="client-title">Helsingin Kulta</a>
                 <div class="margin-20px">
-                  <a href="referenssi/mikura-sushi-oy" class="button-line w-inline-block">
+                  <a href="referenssi/helsingin-kulta" class="button-line w-inline-block">
                     <div>
                       <div>Lue lisää</div>
                       <div class="button-line-button">
