--- a/referenssi/hautaustoimisto-rauha-oy.html
+++ b/referenssi/hautaustoimisto-rauha-oy.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html><!--  Last Published: Fri Nov 17 2023 14:05:47 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="648c13bb2acf21f4e3bfc24c" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
+<html data-wf-page="6557716346ae4ca9bc100062" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
-  <title>Vorrios Oy kotisivut - Nords Oy</title>
-  <meta content="Vorrios Oy kotisivut - Nords Oy" property="og:title">
-  <meta content="Vorrios Oy kotisivut - Nords Oy" property="twitter:title">
+  <title>Hautaustoimisto Rauha Oy</title>
+  <meta content="Hautaustoimisto Rauha Oy" property="og:title">
+  <meta content="Hautaustoimisto Rauha Oy" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="../css/normalize.css" rel="stylesheet" type="text/css">
   <link href="../css/components.css" rel="stylesheet" type="text/css">
@@ -16,7 +16,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="../images/webclip.jpg" rel="apple-touch-icon">
-  <link href="https://www.nords.fi/referenssi/vorrios-oy" rel="canonical">
+  <link href="https://www.nords.fi/referenssi/hautaustoimisto-rauha-oy" rel="canonical">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-PSLMFQDWYR"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('set', 'developer_id.dZGVlNj', true);gtag('config', 'G-PSLMFQDWYR');</script>
   <meta name="robots" content="noindex">
@@ -92,17 +92,17 @@
         </div>
       </div>
     </header>
-    <div class="hero inner _2">
+    <div id="up" class="hero inner _2">
       <div class="container">
         <div class="hero-grid _2">
-          <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f56-e3bfc24c" class="part-2 center">
+          <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f56-bc100062" class="part-2 center">
             <div class="hero-flex-center">
-              <h1 class="hero-display">Vorrios Oy</h1>
+              <h1 class="hero-display hautaus-toimisto-rauha-oy">Hautaustoimisto Rauha Oy</h1>
             </div>
           </div>
-          <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f5a-e3bfc24c" class="part-1 _2">
+          <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f5a-bc100062" class="part-1 _2">
             <div class="hero-flex-center left _3">
-              <p class="paragraph-1 second">08/2022</p>
+              <p class="paragraph-1 second">11/2023</p>
             </div>
           </div>
         </div>
@@ -116,18 +116,12 @@
     <div class="section">
       <div class="container">
         <div class="blog-rich-text">
-          <div class="photo-animation-main"><img src="../images/vorrios.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 92vw, (max-width: 1439px) 64vw, 840px" srcset="../images/vorrios-p-500.webp 500w, ../images/vorrios-p-800.webp 800w, ../images/vorrios-p-1080.webp 1080w, ../images/vorrios.webp 1600w" alt="Yrityksen Vorrios Oy kotisivut auki tietokoneella ja matkapuhelimella." class="photo">
+          <div class="photo-animation-main"><img src="../images/mockup-rauhanhautaus.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 92vw, (max-width: 1439px) 64vw, 840px" srcset="../images/mockup-rauhanhautaus.webp 500w, ../images/mockup-rauhanhautaus.webp 800w, ../images/mockup-rauhanhautaus.webp 1080w, ../images/mockup-rauhanhautaus.webp 1600w, ../images/mockup-rauhanhautaus.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Hautaustoimisto Rauha Oy:n verkkosivut." class="photo">
             <div class="absolute-background"></div>
           </div>
           <div class="margin-50px w-richtext">
-            <p>Vorrios Oy on räätälöityjen miesten vaatteiden valmistukseen erikoistunut yritys, jonka tavoitteena on tarjota asiakkailleen yksilöllisiä ja korkealaatuisia vaatekappaleita. Kotisivuprojektimme keskeisenä tavoitteena oli luoda selkeä ja informatiivinen verkkosivusto, joka auttaa kävijöitä löytämään tarvitsemansa tiedon helposti ja nopeasti.</p>
-            <p>Sivujen moderni muotoilu ja käyttäjäystävällinen navigointi auttavat asiakkaita saamaan selkeän käsityksen Vorrioksen tarjoamista palveluista.</p>
-            <p>‍</p>
-            <blockquote>&quot;We are very happy with your work and efficiency and we are looking forward to working with you in the future. It is really important for us that you understand our vision and you can put it in words and pictures.&quot;</blockquote>
-            <p>‍</p>
-            <p>Olemme ylpeitä saavutetusta lopputuloksesta ja uskomme, että uudet kotisivumme auttavat Vorrios Oy:tä saavuttamaan uusia asiakkaita ja kasvattamaan liiketoimintaansa.</p>
-            <p>‍</p>
-            <p>Voit tutustua sivuihin <a href="https://www.vorrios.com/" target="_blank">tästä!</a>
+            <p>Hautaustoimisto Rauha Oy on perheyritys, joka tarjoaa kattavia hautauspalveluita. Loimme heille verkkosivut, jotka heijastavat heidän kunnioittavaa ja huomaavaista palvelua vaikeina hetkinä. Yhteistyömme Hautaustoimisto Rauha Oy:b kanssa on ollut menestyksekäs, ja olemme iloisia siitä, että olemme voineet auttaa heitä vahvistamaan digitaalista läsnäoloaan.</p>
+            <p>Pääset tutustumaan yrityksen sivuihin <a href="https://www.rauhanhautaus.fi" target="_blank">tästä!</a>
             </p>
           </div>
         </div>
@@ -151,15 +145,15 @@
           </div>
           <div class="margin-40px">
             <div class="w-layout-grid client-grid">
-              <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f95-e3bfc24c" class="client-card">
-                <a href="../referenssi/ficia-oy" class="client-image w-inline-block"><img src="../images/ficia.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/ficia-p-500.webp 500w, ../images/ficia-p-800.webp 800w, ../images/ficia-p-1080.webp 1080w, ../images/ficia.webp 1600w" alt="Yrityksen Ficia Oy kotisivut auki tietokoneella ja matkapuhelimella." class="client-image"></a>
+              <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f95-bc100062" class="client-card">
+                <a href="../referenssi/valaistus-mk-oy" class="client-image w-inline-block"><img src="../images/mockup-valaistusmk.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/mockup-valaistusmk-p-500.webp 500w, ../images/mockup-valaistusmk-p-800.webp 800w, ../images/mockup-valaistusmk-p-1080.webp 1080w, ../images/mockup-valaistusmk-p-1600.webp 1600w, ../images/mockup-valaistusmk.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Valaistus MK:n verkkosivut." class="client-image"></a>
                 <div class="client-content add-shadow">
                   <div class="category-felx">
-                    <a href="#" class="category-tag">04/2023</a>
+                    <a href="#" class="category-tag">09/2023</a>
                   </div>
-                  <a href="../referenssi/ficia-oy" class="client-title">Ficia Oy</a>
+                  <a href="../referenssi/valaistus-mk-oy" class="client-title">Valaistus MK Oy</a>
                   <div class="margin-20px">
-                    <a href="../referenssi/ficia-oy" class="button-line w-inline-block">
+                    <a href="../referenssi/valaistus-mk-oy" class="button-line w-inline-block">
                       <div>
                         <div>Lue lisää</div>
                         <div class="button-line-button">
@@ -170,15 +164,15 @@
                   </div>
                 </div>
               </div>
-              <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f85-e3bfc24c" class="client-card">
-                <a href="../referenssi/vsc-oy" class="client-image w-inline-block"><img src="../images/vsc.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/vsc-p-500.webp 500w, ../images/vsc-p-800.webp 800w, ../images/vsc-p-1080.webp 1080w, ../images/vsc.webp 1600w" alt="Yrityksen VSC Oy kotisivut auki tietokoneella ja matkapuhelimella." class="client-image"></a>
+              <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f85-bc100062" class="client-card">
+                <a href="../referenssi/lannentilan-leipomo" class="client-image w-inline-block"><img src="../images/lannentilan-leipomo-mockup.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/lannentilan-leipomo-mockup-p-500.webp 500w, ../images/lannentilan-leipomo-mockup-p-800.webp 800w, ../images/lannentilan-leipomo-mockup-p-1080.webp 1080w, ../images/lannentilan-leipomo-mockup-p-1600.webp 1600w, ../images/lannentilan-leipomo-mockup.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Lännentilan leipomon verkkosivut." class="client-image"></a>
                 <div class="client-content add-shadow">
                   <div class="category-felx">
-                    <a href="#" class="category-tag">04/2023</a>
+                    <a href="#" class="category-tag">08/2023</a>
                   </div>
-                  <a href="../referenssi/vsc-oy" class="client-title">VSC Oy</a>
+                  <a href="../referenssi/lannentilan-leipomo" class="client-title">Lännentilan Leipomo Oy</a>
                   <div class="margin-20px">
-                    <a href="../referenssi/vsc-oy" class="button-line w-inline-block">
+                    <a href="../referenssi/lannentilan-leipomo" class="button-line w-inline-block">
                       <div>
                         <div>Lue lisää</div>
                         <div class="button-line-button">
@@ -274,7 +268,7 @@
         </div>
       </div><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/631767f79e39ffdfbe0a63c5_sammy-line-three-black-lines-1.svg" loading="lazy" alt="" class="airplane-image _1">
     </footer>
-    <a href="#" class="go-top w-inline-block">
+    <a href="#up" class="go-top w-inline-block">
       <div>Ylös</div>
     </a>
   </div>
