--- a/referenssit.html
+++ b/referenssit.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Oct 31 2023 12:56:02 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Nov 17 2023 14:05:47 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3a8212037d6b" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -131,7 +131,26 @@
           <div class="margin-bottom-80px">
             <div class="w-layout-grid client-grid">
               <div id="w-node-a5804b4c-ec13-71fd-6d04-6df09bbd79f5-12037d6b" class="client-card">
-                <a href="referenssi/helsingin-kulta" class="client-image w-inline-block"><img src="images/mockup-helsinginkulta.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-helsinginkulta.webp 500w, images/mockup-helsinginkulta.webp 800w, images/mockup-helsinginkulta.webp 1080w, images/mockup-helsinginkulta.webp 1600w, images/mockup-helsinginkulta.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Helsingin Kullan verkkosivut." class="client-image"></a>
+                <a href="referenssi/helsingin-kulta" class="client-image w-inline-block"><img src="images/mockup-rauhanhautaus.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-rauhanhautaus.webp 500w, images/mockup-rauhanhautaus.webp 800w, images/mockup-rauhanhautaus.webp 1080w, images/mockup-rauhanhautaus.webp 1600w, images/mockup-rauhanhautaus.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Hautaustoimisto Rauha Oy:n verkkosivut." class="client-image"></a>
+                <div class="client-content add-shadow">
+                  <div class="category-felx">
+                    <a href="#" class="category-tag">11/2023</a>
+                  </div>
+                  <a href="referenssi/hautaustoimisto-rauha-oy" class="client-title">Hautaustoimisto Rauha Oy</a>
+                  <div class="margin-20px">
+                    <a href="referenssi/hautaustoimisto-rauha-oy" class="button-line w-inline-block">
+                      <div>
+                        <div>Lue lisää</div>
+                        <div class="button-line-button">
+                          <div class="button-absolute-line"></div>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div id="w-node-_5e1714bd-a242-38dd-7701-cda37e07bca7-12037d6b" class="client-card">
+                <a href="referenssi/helsingin-kulta" class="client-image w-inline-block"><img src="images/mockup-helsinginkulta.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-helsinginkulta-p-500.webp 500w, images/mockup-helsinginkulta-p-800.webp 800w, images/mockup-helsinginkulta-p-1080.webp 1080w, images/mockup-helsinginkulta-p-1600.webp 1600w, images/mockup-helsinginkulta.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Helsingin Kullan verkkosivut." class="client-image"></a>
                 <div class="client-content add-shadow">
                   <div class="category-felx">
                     <a href="#" class="category-tag">10/2023</a>
@@ -150,7 +169,7 @@
                 </div>
               </div>
               <div id="w-node-_08123857-49c1-ddb1-8dc1-9c58b1d0db3f-12037d6b" class="client-card">
-                <a href="referenssi/valaistus-mk-oy" class="client-image w-inline-block"><img src="images/mockup-valaistusmk.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-valaistusmk.webp 500w, images/mockup-valaistusmk.webp 800w, images/mockup-valaistusmk.webp 1080w, images/mockup-valaistusmk.webp 1600w, images/mockup-valaistusmk.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Valaistus MK:n verkkosivut." class="client-image"></a>
+                <a href="referenssi/valaistus-mk-oy" class="client-image w-inline-block"><img src="images/mockup-valaistusmk.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-valaistusmk-p-500.webp 500w, images/mockup-valaistusmk-p-800.webp 800w, images/mockup-valaistusmk-p-1080.webp 1080w, images/mockup-valaistusmk-p-1600.webp 1600w, images/mockup-valaistusmk.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Valaistus MK:n verkkosivut." class="client-image"></a>
                 <div class="client-content add-shadow">
                   <div class="category-felx">
                     <a href="#" class="category-tag">09/2023</a>
